# scraper-tool-fastapi

./: README.md  pyproject.toml
app/: app.py
app/db/data/: products.json
app/db/repos/: products.py
app/routes/: products.py  scrape.py
app/services/authentication/: __init__.py
app/services/scraper/: __init__.py  interfaces.py  models.py
app/services/scraper/parser/: dental_stall.py
